--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
   <!-- BEGIN: GLOBAL VARIABLES -->
   <script type="text/javascript">
-    var BASE_URL = "{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}"
+    var BASE_URL = "{{BASE_URL}}"
   </script>
   <!-- END: GLOBAL VARIABLES -->
 
@@ -45,9 +45,48 @@
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
 
+  <script src="{% static 'core/js/Global.js' %}"></script>
+
   <!-- BEGIN: Page JS -->
   {% block javascript %}{% endblock %}
   <!-- END: Page JS -->
+
+
+
+  <!-- BEGIN: AJAX CSRF-TOKEN -->
+  <script type="text/javascript">
+  <!-- AJAX CSRF-TOKEN -->
+  function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+          var cookies = document.cookie.split(';');
+          for (var i = 0; i < cookies.length; i++) {
+              var cookie = jQuery.trim(cookies[i]);
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+  }
+  var csrftoken = getCookie('csrftoken');
+
+  function csrfSafeMethod(method) {
+      // these HTTP methods do not require CSRF protection
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+  }
+  $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+              xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          }
+      }
+  });
+  </script>
+  <!-- END: AJAX CSRF-TOKEN -->
+
 
 </body>
 </html>
